[project]
name = "comfyui_memory_cleanup"
description = "A ComfyUI extension that provides nodes for memory cleanup, including VRAM and RAM cleanup functions to optimize ComfyUI performance during long running workflows."
version = "1.1.0"
dependencies = ["psutil"]

[project.urls]
Repository = "https://github.com/LAOGOU-666/Comfyui-Memory_Cleanup"
# Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "laogou666" 
DisplayName = "Comfyui-Memory_Cleanup"
Icon = ""
